style/style.css
/* Fonts */

@import url('https://fonts.googleapis.com/css?family=Cairo:200,300,400,600,700,900&display=swap');

/* Background - for used on secondary pages, with code to fix footer for short content pages */

body {
    background-color: #e45454;
    background: url("../assets/images/background95663.jpg") no-repeat center fixed;
    background-size: cover;
    font-family: "Cairo", sans-serif;

    min-height: 100vh;

    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-orient: vertical;
    -webkit-box-direction: normal;
    -ms-flex-direction: column;
    flex-direction: column;
}

/* Color Schemes - reusable colour schemes for pages and containers*/

.nav-footer-color {
    background-color: #e7bd73;
    color: #4a4949;
    box-shadow: 0px 0px 25px 0px rgba(231, 189, 115, 0.95);
    -webkit-box-shadow: 0px 0px 25px 0px rgba(231, 189, 115, 0.95);
    -moz-box-shadow: 0px 0px 25px 0px rgba(231, 189, 115, 0.95);
}

.bg-clr-yellow {
    background-color: #f9931eed;
}

.bg-clr-green {
    background-color: #c3a61eed;
}

.bg-clr-purple {
    background-color: #a775d2ed;
}

.bg-clr-orange {
    background-color: #e5562bed;
}

.bg-clr-blue {
    background-color: #6eafd6ed;
}

.bg-clr-red {
    background-color: #e45454ed;
}

/* Buttons - reusable button formatting for use on pages to keep styling uniform*/

.btn-red-transition {
    color: #fafafa;
    font-weight: 600;
    background-color: #e45454;
    border: 0px solid #e45454;
    transition: all 0.35s ease-in-out;
    -o-transition: all 0.35s ease-in-out;
    -moz-transition: all 0.35s ease-in-out;
    -webkit-transition: all 0.35s ease-in-out;
}

.btn-red-transition:hover {
    background-color: #b34242;
    color: #ffffff;
    box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.75);
    -webkit-box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.75);
    -moz-box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.75);
}

.btn-green-transition {
    color: #fafafa;
    font-weight: 600;
    background-color: #93c31e;
    border: 0px solid #93c31e;
    transition: all 0.35s ease-in-out;
    -o-transition: all 0.35s ease-in-out;
    -moz-transition: all 0.35s ease-in-out;
    -webkit-transition: all 0.35s ease-in-out;
}

.btn-green-transition:hover {
    background-color: #7cb71e;
    color: #ffffff;
    box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.75);
    -webkit-box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.75);
    -moz-box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.75);
}

.btn-tour {
    margin-top: 10px;
}

/* General Formatting - general formatting for reuse on pages, items such as headdings, containers for content*/

.uppercase {
    text-transform: uppercase;
}

.headings {
    padding-top: 15px;
    font-weight: 600;
}

.headline-text {
    font-size: 20px;
}

.border-box {
    box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.75);
    -webkit-box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.75);
    -moz-box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.75);
}

.box-format {
    padding: 20px;
    margin: 10px;
    border-radius: 25px;
}

/* Navigation Section - styling and formatting for use of reusable nav bar at top of pages*/

.navbar-nav {
    text-align: center
}

.navbar-brand img {
    border: 3px solid #e45454;
    max-width: 60px;
}

.navbar-brand-text {
    font-weight: 600;
    color: #e45454;
    font-size: 25px;
    padding: 0px 10px 0px 10px;
    vertical-align: middle;
}

.navbar-light .navbar-nav .nav-link {
    font-size: 20px;
    transition: all 0.35s ease-in-out;
    -moz-transition: all 0.35s ease-in-out;
    -o-transition: all 0.35s ease-in-out;
    -webkit-transition: all 0.35s ease-in-out;
}

.navbar-light .navbar-nav .nav-link:hover {
    color: #e45454;
    font-weight: 600;
}

.navbar-light .navbar-toggler {
    border: 1px solid #e7bd73;
}

/* Section - setting of default for mobile devices from which background image display on pages */

section {
    margin-top: 63px;
    padding: 15px;
}

/* Index - formatting of index page, including background image, opaque overlay, jumbotron and nav questions*/

.index-container {
    height: 100vh;
    background-color: #e45454;
    background: url("../assets/images/monkees.jpg") no-repeat top center;
    background-size: cover;
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    -webkit-box-pack: center;
    -ms-flex-pack: center;
    justify-content: center;
    position: relative;
}

.opaque-overlay {
    position: absolute;
    top: 0;
    left: 0;
    height: 100%;
    width: 100%;
    background-color: rgba(45, 30, 4, 0.65);
}

.jumbotron {
    background-color: transparent;
}

.jumbotron-heading {
    color: #e45454;
    font-weight: bold;
    margin-bottom: 30px;
}

.jumbotron-text {
    margin: 30px;
    font-size: 24px;
    color: #ffffff;
}

.navigation-container {
    margin-top: 0px;
    background-color: transparent;
}

.navquestion {
    height: 100px;
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    -webkit-box-pack: center;
    -ms-flex-pack: center;
    justify-content: center;
}

.navquestion a {
    text-decoration: none;
}

.navquestion a span {
    color: #ffffff;
}

/* About - formatting for floating of images for mobile design*/

.band-img-float {
    border: 3px solid #e45454;
    border-radius: 25px;
    margin: 10px auto 10px auto;
    float: none;
}

/* Tours - formatting of tour date page*/

.tour-date-item {
    padding: 60px 40px 0px 40px;
    border-left: 3px solid #831f05;
    position: relative;
}

.tour-date-item p {
    padding: 0;
    margin: 0;
}

.tour-date-item:before {
    content: attr(data-dates);
    position: absolute;
    display: block;
    left: 20px;
    top: 40px;
    font-weight: 500;
    font-size: 12px;
    padding: 0;
    margin: 0;
}

.tour-date-item:after {
    height: 12px;
    width: 12px;
    border-radius: 50%;
    background-color: #395812;
    position: absolute;
    display: block;
    left: -7px;
    top: 40px;
    content: "";
}

/* Media - formatting of items for media page including image float, list formatting, audio player formatting*/

/* -- Albums - image float and sizing, list formatting and audio player size formatting */

.album-img-float {
    border: 3px solid #e45454;
    max-width: 100px;
    margin: 10px auto 10px auto;
    float: none;
}

.song-list {
    padding: 15px 0px 15px 40px;
}

.audio-player {
    padding-bottom: 15px;
    max-width: 100%;
}

audio {
    width: 100%;
}

/* Bookings - formatting of contact forms container and contact links */

.contact-forms {
    padding: 15px 0px 15px 0px;
}

.contact-links {
    padding-top: 10px;
    padding-bottom: 10px;
}

.contact-links li a i {
    color: #e45454;
    font-size: 40px;
    text-align: center;
    padding: 5px;
    width: 40px;
    height: 40px;
}

.contact-names {
    font-size: 24px;
    font-weight: 600;
    padding-left: 30px;
}

/* Footer Section - reusable formatting for footers for every page */

footer {
    margin-top: auto;
}

.footer-headings {
    padding-top: 15px;
    font-weight: 600;
}

.readme-link {
    color: #e45454;
    font-size: 25px;
    padding: 0px 0px 0px 15px;
}

.footer-links li a i {
    color: #e45454;
    font-size: 25px;
    text-align: center;
    padding: 5px;
    width: 40px;
    height: 40px;
}

/* Modal formatting */

/* Code adapted to make modal fixed with content scrollable from https://stackoverflow.com/questions/10476632/how-to-scroll-the-page-when-a-modal-dialog-is-longer-than-the-screen */

.modal-body {
    max-height: 70vh;
    overflow-y: auto;
}

/* End of code snippet */

.modal-title {
    color: #fafafa;
    font-weight: 600;
}

/* Media Queries - formatting of pages for responsive design on larger viewports */

@media (min-width:992px) {
    .navbar-brand img {
        border: 3px solid #e45454;
        max-width: 100px;
    }

    section {
        margin-top: 81px;
    }

    .band-img-float {
        float: left;
        margin: 10px 10px 10px 0px;
    }

    .album-img-float {
        float: right;
        margin: 10px;
        max-width: 150px;
    }

    .contact-links li a i {
        color: #e45454;
        font-size: 25px;
        text-align: center;
        padding: 5px;
        width: 40px;
        height: 40px;
        border: 3px solid #e45454;
        border-radius: 50%;
        transition: all 0.35s ease-in-out;
        -o-transition: all 0.35s ease-in-out;
        -moz-transition: all 0.35s ease-in-out;
        -webkit-transition: all 0.35s ease-in-out;
    }

    .readme-link {
        color: #4a4949;
        transition: all 0.35s ease-in-out;
        -o-transition: all 0.35s ease-in-out;
        -moz-transition: all 0.35s ease-in-out;
        -webkit-transition: all 0.35s ease-in-out;
    }

    .footer-links li a i {
        color: #4a4949;
        font-size: 25px;
        text-align: center;
        padding: 5px;
        width: 40px;
        height: 40px;
        border: 3px solid #e7bd73;
        border-radius: 50%;
        transition: all 0.35s ease-in-out;
        -o-transition: all 0.35s ease-in-out;
        -moz-transition: all 0.35s ease-in-out;
        -webkit-transition: all 0.35s ease-in-out;
    }

    .readme-link:hover,
    .footer-links li a i:hover {
        color: #e45454;
        border-color: #e45454;
    }

    .contact-links {
        padding-top: 20px;
    }

    .contact-links li {
        text-align: left;
        margin: 20px;
        display: block;
    }

    .contact-links li a i:hover {
        color: #fafafa;
        background-color: #e45454;
        border-color: #e45454;
        -webkit-transform: scale(1.5);
        -ms-transform: scale(1.5);
        transform: scale(1.5);
    }
}

@media (min-width:768px) {

    .col-lg-7>form {
        max-width: 70%;
        margin: 0 auto;
    }
}

